Added NickM's Platform Lab Review (Annual Talk)

--- a/resources.html
+++ b/resources.html
@@ -71,6 +71,11 @@
               [&nbsp;<a href="slides/one-minute-madness%20slide.pptx">slides</a>&nbsp;]
             </li>
             <li>
+              A high-level overview of PISCES by Prof. Nick McKeown (pages: 16-21). <a href="http://platformlab.stanford.edu/events.html">Stanford Platform Lab (Annual Review)</a>, Stanford, CA, USA, February 2016.
+              <br>
+              [&nbsp;<a href="slides/Platform%20Lab%20Review%202016.pdf">slides</a>&nbsp;]
+            </li>        
+            <li>
               OvS Datapath Specialization using P4. <a href="http://openvswitch.org/support/ovscon2015/">Open vSwitch Conference</a>, San Jose, CA, USA, November 2015.
               <br>
               [&nbsp;<a href="slides/ovscon15-p4.pptx">slides</a>&nbsp;]
