--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
         </div>
           
         <div class="col-md-5">
-          <h3>The PISCES Workflow</h3>
+          <h3>OVS Specialization using P4</h3>
           <!-- 4:3 aspect ratio -->
           <div class="span4">
-              <img src="images/compilation-steps.png" alt="" width="100%" height="100%">
+              <iframe width="450" height="320" src="https://www.youtube.com/embed/mqHuK1x14As" frameborder="0" allowfullscreen></iframe>
+<!--              <img src="images/compilation-steps.png" alt="" width="100%" height="100%">-->
           </div>
         </div>
       </div>
