--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="col-md-4">
           <h2>Contact</h2>
             <p>
-              <b>Project Members</b>: <a
+              <b>Project Lead</b>: <a
           href="http://www.cs.princeton.edu/~mshahbaz">Muhammad Shahbaz</a>
               <br>
               <b>Contact Email</b>: mshahbaz at cs.princeton.edu
