--- a/members.html
+++ b/members.html
@@ -64,7 +64,7 @@
       <hr>
       <div class="row">
         <div class="span4">
-          <h2><img src="images/princeton-university-logo.jpg" alt="Princeton" width="14%" height="14%"/></h2>
+          <h2><img src="images/princeton-university-logo.jpg" alt="Princeton" width="150" height="43"/></h2>
           <ul>
             <li><a href="http://www.cs.princeton.edu/~jrex">Jennifer Rexford</a> (Faculty)</li>
             <li><a href="http://www.cs.princeton.edu/~feamster">Nick Feamster</a> (Faculty)</li>
@@ -73,7 +73,7 @@
         </div>
         <br>
         <div class="span4">
-          <h2><img src="images/stanford-university-logo.png" alt="Stanford" width="12%" height="12%"/></h2>
+          <h2><img src="images/stanford-university-logo.png" alt="Stanford" width="120" height="39"/></h2>
           <ul>
             <li><a href="http://yuba.stanford.edu/~nickm/">Nick McKeown</a> (Faculty)</li>
             <li><a href="http://stanford.edu/~yo2seol/">Sean Choi</a> (PhD Student)</li>
@@ -81,14 +81,14 @@
         </div>
         <br>
         <div class="span4">
-          <h2><img src="images/vmware-logo.png" alt="VMware" width="14%" height="14%"/></h2>
+          <h2><img src="images/vmware-logo.png" alt="VMware" width="130" height="21"/></h2>
           <ul>
             <li><a href="https://twitter.com/Ben_Pfaff">Ben Pfaff</a> (Open vSwitch - Lead Contributor)</li>
           </ul>
         </div>  
         <br>
         <div class="span4">
-          <h2><img src="images/barefoot-logo.jpg" alt="Barefoot" width="14%" height="14%"/></h2>
+          <h2><img src="images/barefoot-logo.jpg" alt="Barefoot" width="130" height="33"/></h2>
           <ul>
             <li><a href="https://www.linkedin.com/in/changhoon-kim-b3394317">Changhoon Kim</a> (Director of System Architecture)</li>
           </ul>
