Added OVS Datapath Specialization using P4 video under resources.html

--- a/resources.html
+++ b/resources.html
@@ -81,15 +81,15 @@
               [&nbsp;<a href="slides/ovscon15-p4.pptx">slides</a>&nbsp;]
             </li>
             </ul>
-<!--
           <h3>Videos</h3> 
-            <p>
-              Building a Programmable Data Plane: NetASM
+            <ul>
+            <li>
+              OVS Datapath Specialization using P4.
               <br>
-              [&nbsp;<a href="https://www.youtube.com/watch?v=EWW1pw1lhP0">YouTube Video (2014)</a>&nbsp;]
-              <br>
-              [&nbsp;<a href="https://www.youtube.com/watch?v=BuJCRlFQqSw">YouTube Video (2015)</a>&nbsp;]
-            </p>
+              [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">YouTube Video (2015)</a>&nbsp;]
+            </li>
+            </ul>
+<!--
           <h3>SDN Coursera Course</h3> 
             <p>
               Programming Assignment on NetASM's Haskell Runtime (2014)
@@ -99,7 +99,7 @@
             <p>
               Programming Assignment on NetASM's Python Runtime (2015)
               <br>
-              [&nbsp;<a href="https://github.com/PrincetonUniversity/Coursera-SDN/blob/master/assignments/learning_switch_acl/README.md">Github Readme</a>&nbsp;]    
+              [&nbsp;<a href="https://github.com/PrincetonUniversity/Coursera-SDN/blob/master/assignments/learning_switch_acl/README.md">Github Readme</a>&nbsp;]  
             </p>
 -->
         </div>
