--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="jumbotron">
         <h1><b>PISCES</b></h1>
         <h2>A Programmable, Protocol-Independent Software Switch</h2>
-        <p><a class="btn btn-lg btn-primary" href="https://github.com/P4-vSwitch" role="button">View on Github &raquo;</a></p>
+        <p><a class="btn btn-lg btn-primary" href="https://github.com/P4-vSwitch" role="button">View on GitHub &raquo;</a></p>
       </div>
     </div> <!-- /container -->
       
