Adding details about the P4 workshop talk

--- a/resources.html
+++ b/resources.html
@@ -66,6 +66,11 @@
           <h3>Talks</h3> 
             <ul>
             <li>
+              PISCES: A Programmable, Protocol-Independent Software Switch. <a href="https://2016p4workshop.sched.org/event/6otv/pisces-a-programmable-protocol-independent-software-switch">P4 Workshop</a>, Stanford, CA, USA, May 2016.
+              <br>
+              [&nbsp;<a href="http://schd.ws/hosted_files/2016p4workshop/c6/Princeton%20%26%20Stanford%2C%20pisces-talk.pdf">slides</a>&nbsp;]
+            </li>
+            <li>
               PISCES: A Programmable, Protocol-Independent Software Switch. <a href="http://www.research.att.com/conferences/2016_Academic_Summit/2016_academic_summit_poster.html?fbid=iIffE4KfmNr">AT&amp;T Research Academic Summit</a>, Bedminster, NJ, USA, March 2016. <i>One-Minute Madness.</i>
               <br>
               [&nbsp;<a href="slides/one-minute-madness%20slide.pptx">slides</a>&nbsp;]
