--- a/resources.html
+++ b/resources.html
@@ -89,9 +89,9 @@
           <h3>Videos and Audios</h3> 
             <ul>
             <li>
-              OVS Datapath Specialization using P4.
+              OVS Datapath Specialization using P4, 2015.
               <br>
-              [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">YouTube Video (2015)</a>&nbsp;]
+              [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">YouTube Video</a>&nbsp;]
             </li>
             <li>
               Interview with Ben Pfaff, <a href="http://ovsorbit.benpfaff.org/">OVS Orbit Podcast</a>, June 2016.
