--- a/publications.html
+++ b/publications.html
@@ -69,8 +69,7 @@
               <b>PISCES: A Programmable, Protocol-Independent Software Switch</b>.
               In <em>ACM SIGCOMM, Florianópolis, Brazil</em>, August 2016.
               <br>
-              [&nbsp;<a href="">camera ready</a>&nbsp;]
-              [&nbsp;<a href="">slides</a>&nbsp;]
+              [&nbsp;<a href="./papers/sigcomm16-pisces.pdf">camera ready</a>&nbsp;]
             </p>
         </div>
       </div>
