--- a/members.html
+++ b/members.html
@@ -68,7 +68,7 @@
           <ul>
             <li><a href="http://www.cs.princeton.edu/~jrex">Jennifer Rexford</a> (Faculty)</li>
             <li><a href="http://www.cs.princeton.edu/~feamster">Nick Feamster</a> (Faculty)</li>
-            <li><a href="http://www.cs.princeton.edu/~mshahbaz">Muhammad Shahbaz</a> (PhD Student)</li>
+            <li><a href="http://www.cs.princeton.edu/~mshahbaz">Muhammad Shahbaz</a> (Ph.D. Student)</li>
           </ul>
         </div>
         <br>
@@ -76,7 +76,7 @@
           <h2><img src="images/stanford-university-logo.png" alt="Stanford" width="120" height="39"/></h2>
           <ul>
             <li><a href="http://yuba.stanford.edu/~nickm/">Nick McKeown</a> (Faculty)</li>
-            <li><a href="http://stanford.edu/~yo2seol/">Sean Choi</a> (PhD Student)</li>
+            <li><a href="http://stanford.edu/~yo2seol/">Sean Choi</a> (Ph.D. Student)</li>
           </ul>
         </div>
         <br>
