--- a/resources.html
+++ b/resources.html
@@ -68,22 +68,22 @@
             <li>
               PISCES: A Programmable, Protocol-Independent Software Switch. <a href="https://2016p4workshop.sched.org/event/6otv/pisces-a-programmable-protocol-independent-software-switch">P4 Workshop</a>, Stanford, CA, USA, May 2016.
               <br>
-              [&nbsp;<a href="http://schd.ws/hosted_files/2016p4workshop/c6/Princeton%20%26%20Stanford%2C%20pisces-talk.pdf">slides</a>&nbsp;]
+              [&nbsp;<a href="http://schd.ws/hosted_files/2016p4workshop/c6/Princeton%20%26%20Stanford%2C%20pisces-talk.pdf">Slides</a>&nbsp;]
             </li>
             <li>
               PISCES: A Programmable, Protocol-Independent Software Switch. <a href="http://www.research.att.com/conferences/2016_Academic_Summit/2016_academic_summit_poster.html?fbid=iIffE4KfmNr">AT&amp;T Research Academic Summit</a>, Bedminster, NJ, USA, March 2016. <i>One-Minute Madness.</i>
               <br>
-              [&nbsp;<a href="slides/one-minute-madness%20slide.pptx">slides</a>&nbsp;]
+              [&nbsp;<a href="slides/one-minute-madness%20slide.pptx">Slides</a>&nbsp;]
             </li>
             <li>
               A high-level overview of PISCES by Prof. Nick McKeown (pages: 16-21). <a href="http://platformlab.stanford.edu/events.html">Stanford Platform Lab (Annual Review)</a>, Stanford, CA, USA, February 2016.
               <br>
-              [&nbsp;<a href="slides/Platform%20Lab%20Review%202016.pdf">slides</a>&nbsp;]
+              [&nbsp;<a href="slides/Platform%20Lab%20Review%202016.pdf">Slides</a>&nbsp;]
             </li>        
             <li>
               OvS Datapath Specialization using P4. <a href="http://openvswitch.org/support/ovscon2015/">Open vSwitch Conference</a>, San Jose, CA, USA, November 2015.
               <br>
-              [&nbsp;<a href="slides/ovscon15-p4.pptx">slides</a>&nbsp;]
+              [&nbsp;<a href="slides/ovscon15-p4.pptx">Slides</a>&nbsp;]
             </li>
             </ul>
           <h3>Videos and Audios</h3> 
