adding vagrant installation instructions.

--- a/index.html
+++ b/index.html
@@ -82,26 +82,16 @@
       </div>
           
       <div class="row">
-<!--
+
         <div class="col-md-4">
           <h2>Installation</h2>
-          <p>Most recommended way to get hands-on with this project is
-        through our pre-built VirtualBox VMs. Click below to download
-        our VMs.</p>  
-          <p><a class="btn btn-default" href="" role="button">
-            VM Download &raquo;</a>
+          <p>We provide a VM-based test environment for PISCES using Vagrant.</p>  
+          <p><a class="btn btn-default" href="https://github.com/P4-vSwitch/vagrant" role="button">
+            Vagrant Setup &raquo;</a>
           </p>
           </p>
         </div>
-        <div class="col-md-5">
-          <h2>Documentation</h2>
-          <p>For more documentation, click below:</p>
-          <p><a class="btn btn-default" href="netasm-python.html" role="button">Documentation &raquo;</a>
-             &nbsp;
-          </p>
-       </div>
--->
-          
+
         <div class="col-md-4">
           <h2>Contact</h2>
             <p>
