--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       <div class="row">
 
         <div class="col-md-4">
-          <h2>Installation</h2>
-          <p>We provide a VM-based test environment for PISCES using Vagrant.</p>  
+          <h2>Vagrant Setup</h2>
+          <p>We provide a VM-based simulation environment for PISCES using Vagrant.</p>  
           <p><a class="btn btn-default" href="https://github.com/P4-vSwitch/vagrant" role="button">
-            Vagrant Setup &raquo;</a>
+            Instructions &raquo;</a>
           </p>
           </p>
         </div>
