--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
         <p>&copy; Princeton University, 2016</p>
       </footer>    
     </div>
+    
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)}, i[r].l = 1 * new Date();
+            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g; 
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-81030220-1', 'auto');
+        ga('require', 'linkid');
+        ga('send', 'pageview');
+    </script>
 
 
     <!-- Bootstrap core JavaScript
