adding details about the PISCES talk at VMware.

--- a/resources.html
+++ b/resources.html
@@ -69,11 +69,15 @@
               PISCES: A Programmable, Protocol-Independent Software Switch. 
               <ul>
               <li>
-                  Talk at Microsoft Research, Redmond, WA, USA, July 2016.
+                  VMware, Palo Alto, CA, USA, July 2016.
+                  [&nbsp;<a href="./slides/pisces-vmware.pptx">Slides</a>&nbsp;]
+              </li>    
+              <li>
+                  Microsoft Research, Redmond, WA, USA, July 2016.
                   [&nbsp;<a href="./slides/pisces-msr.pptx">Slides</a>&nbsp;]
               </li>          
               <li>
-                  Talk at Hughes Network, Germantown, MD, USA, June 2016.
+                  Hughes Network, Germantown, MD, USA, June 2016.
                   [&nbsp;<a href="./slides/pisces-hughes.pdf">Slides</a>&nbsp;]
               </li>
               <li>
