adding details about PISCES talk at the DPDK Summit.

--- a/resources.html
+++ b/resources.html
@@ -69,6 +69,10 @@
               PISCES: A Programmable, Protocol-Independent Software Switch. 
               <ul>
               <li>
+                  <a href="https://dpdksummit.com/">DPDK Summit</a>, San Jose, CA, USA, August 2016.
+                  [&nbsp;<a href="./slides/pisces-intel.pptx">Slides</a>&nbsp;]
+              </li>         
+              <li>
                   VMware, Palo Alto, CA, USA, July 2016.
                   [&nbsp;<a href="./slides/pisces-vmware.pptx">Slides</a>&nbsp;]
               </li>    
