--- a/resources.html
+++ b/resources.html
@@ -95,7 +95,7 @@
               <li>
                   <a href="https://2016p4workshop.sched.org/event/6otv/pisces-a-programmable-protocol-independent-software-switch">P4 Workshop</a>, Stanford, CA, USA, May 2016.
                   [&nbsp;<a href="http://schd.ws/hosted_files/2016p4workshop/c6/Princeton%20%26%20Stanford%2C%20pisces-talk.pdf">Slides</a>&nbsp;]
-              </li>
+              </li>  
               <li>
                   <a href="http://www.research.att.com/conferences/2016_Academic_Summit/2016_academic_summit_poster.html?fbid=iIffE4KfmNr">AT&amp;T Research Academic Summit</a>, Bedminster, NJ, USA, March 2016. <i>One-Minute Madness.</i>
                   [&nbsp;<a href="slides/one-minute-madness%20slide.pptx">Slides</a>&nbsp;]
@@ -121,7 +121,19 @@
               [&nbsp;<a href="http://ovsorbit.benpfaff.org/#e9">Summary</a>&nbsp;] [&nbsp;<a href="http://ovsorbit.benpfaff.org/episode-9.mp3">Recording</a>&nbsp;]
             </li>
             <li>
-              OVS Datapath Specialization using P4, 2015.
+                  <a href="https://p4developerday2016.sched.org/">P4 Developer Day</a>, Stanford, CA, USA, May 2016.
+                  <ul>
+                      <li>
+                          P4 Demo using PISCES [&nbsp;<a href="https://youtu.be/Nbsxt3EnhLs?list=PLf7HGRMAlJBy2e_vy8VxIkSNO0IJ_lqZX&t=2042">YouTube Video</a>&nbsp;]
+                      </li>
+                      <li>
+                          Mapping P4 to PISCES [&nbsp;<a href="https://youtu.be/r3MWiHNTN6o?t=1801">YouTube Video</a>&nbsp;]
+                      </li>
+                  </ul>  
+                
+              </li>    
+            <li>
+              OVS Datapath Specialization using P4, November 2015.
               <br>
               [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">YouTube Video</a>&nbsp;]
             </li>
