adding Sean's DPDK Summit videos on PISCES

--- a/resources.html
+++ b/resources.html
@@ -73,8 +73,8 @@
                   [&nbsp;<a href="http://conferences.sigcomm.org/sigcomm/2016/files/program/sigcomm/Session11-Paper02-PISCES-Muhammad-Slides.pdf">Slides</a>&nbsp;]
               </li>
               <li>
-                  <a href="https://dpdksummit.com/">DPDK Summit</a>, San Jose, CA, USA, August 2016.
-                  [&nbsp;<a href="./slides/pisces-intel.pptx">Slides</a>&nbsp;]
+                  <a href="http://www2.eventsxd.com/event/1687/dpdksummitusa2016/sessions">DPDK Summit</a>, San Jose, CA, USA, August 2016.
+                  [&nbsp;<a href="./slides/pisces-intel.pptx">Slides</a>, <a href="https://www.youtube.com/watch?v=28wJwRcHZG0">Video</a>&nbsp;]
               </li>
               <li>
                   VMware, Palo Alto, CA, USA, July 2016.
@@ -124,10 +124,10 @@
                   <a href="https://p4developerday2016.sched.org/">P4 Developer Day</a>, Stanford, CA, USA, May 2016.
                   <ul>
                       <li>
-                          P4 Demo using PISCES [&nbsp;<a href="https://youtu.be/Nbsxt3EnhLs?list=PLf7HGRMAlJBy2e_vy8VxIkSNO0IJ_lqZX&t=2042">YouTube Video</a>&nbsp;]
+                          P4 Demo using PISCES [&nbsp;<a href="https://youtu.be/Nbsxt3EnhLs?list=PLf7HGRMAlJBy2e_vy8VxIkSNO0IJ_lqZX&t=2042">Video</a>&nbsp;]
                       </li>
                       <li>
-                          Mapping P4 to PISCES [&nbsp;<a href="https://youtu.be/r3MWiHNTN6o?t=1801">YouTube Video</a>&nbsp;]
+                          Mapping P4 to PISCES [&nbsp;<a href="https://youtu.be/r3MWiHNTN6o?t=1801">Video</a>&nbsp;]
                       </li>
                   </ul>  
                 
@@ -135,7 +135,7 @@
             <li>
               OVS Datapath Specialization using P4, November 2015.
               <br>
-              [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">YouTube Video</a>&nbsp;]
+              [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">Video</a>&nbsp;]
             </li>
             </ul>
           <h3>News</h3>
