--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
               <b>PISCES: A Programmable, Protocol-Independent Software Switch</b>.
               In <em>ACM SIGCOMM, Florianópolis, Brazil</em>, August 2016.
               <br>
-              [&nbsp;<a href="./papers/sigcomm16-pisces.pdf">Camera Ready</a>&nbsp;]
+              [&nbsp;<a href="./papers/sigcomm16-pisces.pdf">Camera Ready</a>, <a href="http://conferences.sigcomm.org/sigcomm/2016/files/program/sigcomm/Session11-Paper02-PISCES-Muhammad-Slides.pdf">Slides</a>&nbsp;]
             </p>
         </div>
       </div>
