adding ONUG poster details

--- a/resources.html
+++ b/resources.html
@@ -63,11 +63,14 @@
       <div class="row">
         <div class="offset1 span8">
           <h1>Other Resources</h1>
-          <h3>Talks</h3>
+          <h3>Posters and Talks</h3>
             <ul>
             <li>
               PISCES: A Programmable, Protocol-Independent Software Switch.
               <ul>
+              <li>
+                  <a href="https://opennetworkingusergroup.com/">ONUG</a>, New York, NY, USA, October 2016. (Poster)
+              </li>    
               <li>
                   <a href="http://conferences.sigcomm.org/sigcomm/2016/">ACM SIGCOMM</a>, Florianópolis, Brazil, August 2016.
                   [&nbsp;<a href="http://conferences.sigcomm.org/sigcomm/2016/files/program/sigcomm/Session11-Paper02-PISCES-Muhammad-Slides.pdf">Slides</a>&nbsp;]
