adding OVSCon'16, P4DevDay'16, and Barefoot talks on PISCES

--- a/resources.html
+++ b/resources.html
@@ -69,6 +69,18 @@
               PISCES: A Programmable, Protocol-Independent Software Switch.
               <ul>
               <li>
+                  <a href="https://barefootnetworks.com/">Barefoot Networks</a>, Palo Alto, CA, USA, November 2016.
+                  [&nbsp;<a href="./slides/pisces-barefoot'9:16.pptx">Slides</a>&nbsp;]
+              </li>      
+              <li>
+                  <a href="https://p4developerdayfall2016.sched.org/event/8YOm/mapping-p4-to-architectures-demos">P4 Developer Day</a>, Stanford, CA, USA, November 2016.
+                  [&nbsp;<a href="./slides/pisces-p4devday'9:16.pptx">Slides</a>&nbsp;]
+              </li>              
+              <li>
+                  <a href="https://ovs2016.sched.org/event/8aZR/pisces-a-p4-enabled-open-vswitch-muhammad-shahbaz-princeton-university-and-cian-ferriter-intel">Open vSwitch Conference</a>, San Jose, CA, USA, November 2016.
+                  [&nbsp;<a href="http://openvswitch.github.io/support/ovscon2016/8/0845-shahbaz.pdf">Slides</a>&nbsp;]
+              </li>        
+              <li>
                   <a href="https://opennetworkingusergroup.com/">ONUG</a>, New York, NY, USA, October 2016. (Poster)
               </li>    
               <li>
