adding PISCES video from OVSCon'16

--- a/resources.html
+++ b/resources.html
@@ -79,6 +79,7 @@
               <li>
                   <a href="https://ovs2016.sched.org/event/8aZR/pisces-a-p4-enabled-open-vswitch-muhammad-shahbaz-princeton-university-and-cian-ferriter-intel">Open vSwitch Conference</a>, San Jose, CA, USA, November 2016.
                   [&nbsp;<a href="http://openvswitch.github.io/support/ovscon2016/8/0845-shahbaz.pdf">Slides</a>&nbsp;]
+                  [&nbsp;<a href="https://www.youtube.com/watch?v=waZKLWolZqs">Video</a>&nbsp;]
               </li>        
               <li>
                   <a href="https://opennetworkingusergroup.com/">ONUG</a>, New York, NY, USA, October 2016. (Poster)
@@ -112,6 +113,17 @@
                   [&nbsp;<a href="http://schd.ws/hosted_files/2016p4workshop/c6/Princeton%20%26%20Stanford%2C%20pisces-talk.pdf">Slides</a>&nbsp;]
               </li>  
               <li>
+                  <a href="https://p4developerday2016.sched.org/">P4 Developer Day</a>, Stanford, CA, USA, May 2016.
+                  <ul>
+                      <li>
+                          P4 Demo using PISCES [&nbsp;<a href="https://youtu.be/Nbsxt3EnhLs?list=PLf7HGRMAlJBy2e_vy8VxIkSNO0IJ_lqZX&t=2042">Video</a>&nbsp;]
+                      </li>
+                      <li>
+                          Mapping P4 to PISCES [&nbsp;<a href="https://youtu.be/r3MWiHNTN6o?t=1801">Video</a>&nbsp;]
+                      </li>
+                  </ul>  
+              </li>    
+              <li>
                   <a href="http://www.research.att.com/conferences/2016_Academic_Summit/2016_academic_summit_poster.html?fbid=iIffE4KfmNr">AT&amp;T Research Academic Summit</a>, Bedminster, NJ, USA, March 2016. <i>One-Minute Madness.</i>
                   [&nbsp;<a href="slides/one-minute-madness%20slide.pptx">Slides</a>&nbsp;]
               </li>
@@ -125,32 +137,15 @@
             <li>
               OvS Datapath Specialization using P4. <a href="http://openvswitch.org/support/ovscon2015/">Open vSwitch Conference</a>, San Jose, CA, USA, November 2015.
               <br>
-              [&nbsp;<a href="slides/ovscon15-p4.pptx">Slides</a>&nbsp;]
+              [&nbsp;<a href="slides/ovscon15-p4.pptx">Slides</a>&nbsp;] [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">Video</a>&nbsp;]
             </li>
             </ul>
-          <h3>Videos and Audios</h3>
+          <h3>Podcasts</h3>
             <ul>
             <li>
               Interview with Ben Pfaff, <a href="http://ovsorbit.benpfaff.org/">OVS Orbit Podcast</a>, June 2016.
               <br>
               [&nbsp;<a href="http://ovsorbit.benpfaff.org/#e9">Summary</a>&nbsp;] [&nbsp;<a href="http://ovsorbit.benpfaff.org/episode-9.mp3">Recording</a>&nbsp;]
-            </li>
-            <li>
-                  <a href="https://p4developerday2016.sched.org/">P4 Developer Day</a>, Stanford, CA, USA, May 2016.
-                  <ul>
-                      <li>
-                          P4 Demo using PISCES [&nbsp;<a href="https://youtu.be/Nbsxt3EnhLs?list=PLf7HGRMAlJBy2e_vy8VxIkSNO0IJ_lqZX&t=2042">Video</a>&nbsp;]
-                      </li>
-                      <li>
-                          Mapping P4 to PISCES [&nbsp;<a href="https://youtu.be/r3MWiHNTN6o?t=1801">Video</a>&nbsp;]
-                      </li>
-                  </ul>  
-                
-              </li>    
-            <li>
-              OVS Datapath Specialization using P4, November 2015.
-              <br>
-              [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">Video</a>&nbsp;]
             </li>
             </ul>
           <h3>News</h3>
