--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-md-5">
           <!-- 4:3 aspect ratio -->
           <div class="span4">
-              <iframe width="470" height="350" src="https://www.youtube.com/embed/r3MWiHNTN6o?start=1801" frameborder="0" allowfullscreen></iframe>
+              <iframe width="470" height="350" src="https://www.youtube.com/embed/waZKLWolZqs" frameborder="0" allowfullscreen></iframe>
 <!--              <img src="images/compilation-steps.png" alt="" width="100%" height="100%">-->
           </div>
         </div>
