--- a/resources.html
+++ b/resources.html
@@ -78,8 +78,7 @@
               </li>              
               <li>
                   <a href="https://ovs2016.sched.org/event/8aZR/pisces-a-p4-enabled-open-vswitch-muhammad-shahbaz-princeton-university-and-cian-ferriter-intel">Open vSwitch Conference</a>, San Jose, CA, USA, November 2016.
-                  [&nbsp;<a href="http://openvswitch.github.io/support/ovscon2016/8/0845-shahbaz.pdf">Slides</a>&nbsp;]
-                  [&nbsp;<a href="https://www.youtube.com/watch?v=waZKLWolZqs">Video</a>&nbsp;]
+                  [&nbsp;<a href="http://openvswitch.github.io/support/ovscon2016/8/0845-shahbaz.pdf">Slides</a>, <a href="https://www.youtube.com/watch?v=waZKLWolZqs">Video</a>&nbsp;]
               </li>        
               <li>
                   <a href="https://opennetworkingusergroup.com/">ONUG</a>, New York, NY, USA, October 2016. (Poster)
