some more minor edits

--- a/resources.html
+++ b/resources.html
@@ -136,7 +136,7 @@
             <li>
               OvS Datapath Specialization using P4. <a href="http://openvswitch.org/support/ovscon2015/">Open vSwitch Conference</a>, San Jose, CA, USA, November 2015.
               <br>
-              [&nbsp;<a href="slides/ovscon15-p4.pptx">Slides</a>&nbsp;] [&nbsp;<a href="https://www.youtube.com/watch?v=mqHuK1x14As">Video</a>&nbsp;]
+              [&nbsp;<a href="slides/ovscon15-p4.pptx">Slides</a>, <a href="https://www.youtube.com/watch?v=mqHuK1x14As">Video</a>&nbsp;]
             </li>
             </ul>
           <h3>Podcasts</h3>
