adding Google Summit info

--- a/resources.html
+++ b/resources.html
@@ -69,20 +69,23 @@
               PISCES: A Programmable, Protocol-Independent Software Switch.
               <ul>
               <li>
+                  <a href="https://sites.google.com/view/networkingresearchsummit/schedule">Google Networking Research Summit</a>, Sunnyvale, CA, USA, February 2017. (Poster)
+              </li>
+              <li>
                   <a href="https://barefootnetworks.com/">Barefoot Networks</a>, Palo Alto, CA, USA, November 2016.
                   [&nbsp;<a href="./slides/pisces-barefoot'9:16.pptx">Slides</a>&nbsp;]
-              </li>      
+              </li>
               <li>
                   <a href="https://p4developerdayfall2016.sched.org/event/8YOm/mapping-p4-to-architectures-demos">P4 Developer Day</a>, Stanford, CA, USA, November 2016.
                   [&nbsp;<a href="./slides/pisces-p4devday'9:16.pptx">Slides</a>&nbsp;]
-              </li>              
+              </li>
               <li>
                   <a href="https://ovs2016.sched.org/event/8aZR/pisces-a-p4-enabled-open-vswitch-muhammad-shahbaz-princeton-university-and-cian-ferriter-intel">Open vSwitch Conference</a>, San Jose, CA, USA, November 2016.
                   [&nbsp;<a href="http://openvswitch.github.io/support/ovscon2016/8/0845-shahbaz.pdf">Slides</a>, <a href="https://www.youtube.com/watch?v=waZKLWolZqs">Video</a>&nbsp;]
-              </li>        
+              </li>
               <li>
                   <a href="https://opennetworkingusergroup.com/">ONUG</a>, New York, NY, USA, October 2016. (Poster)
-              </li>    
+              </li>
               <li>
                   <a href="http://conferences.sigcomm.org/sigcomm/2016/">ACM SIGCOMM</a>, Florianópolis, Brazil, August 2016.
                   [&nbsp;<a href="http://conferences.sigcomm.org/sigcomm/2016/files/program/sigcomm/Session11-Paper02-PISCES-Muhammad-Slides.pdf">Slides</a>&nbsp;]
@@ -110,7 +113,7 @@
               <li>
                   <a href="https://2016p4workshop.sched.org/event/6otv/pisces-a-programmable-protocol-independent-software-switch">P4 Workshop</a>, Stanford, CA, USA, May 2016.
                   [&nbsp;<a href="http://schd.ws/hosted_files/2016p4workshop/c6/Princeton%20%26%20Stanford%2C%20pisces-talk.pdf">Slides</a>&nbsp;]
-              </li>  
+              </li>
               <li>
                   <a href="https://p4developerday2016.sched.org/">P4 Developer Day</a>, Stanford, CA, USA, May 2016.
                   <ul>
@@ -120,8 +123,8 @@
                       <li>
                           Mapping P4 to PISCES [&nbsp;<a href="https://youtu.be/r3MWiHNTN6o?t=1801">Video</a>&nbsp;]
                       </li>
-                  </ul>  
-              </li>    
+                  </ul>
+              </li>
               <li>
                   <a href="http://www.research.att.com/conferences/2016_Academic_Summit/2016_academic_summit_poster.html?fbid=iIffE4KfmNr">AT&amp;T Research Academic Summit</a>, Bedminster, NJ, USA, March 2016. <i>One-Minute Madness.</i>
                   [&nbsp;<a href="slides/one-minute-madness%20slide.pptx">Slides</a>&nbsp;]
@@ -153,7 +156,7 @@
               Data traffic system switches control to network administrators, Princeton News, November 2016.
               <br>
               [&nbsp;<a href="http://www.cs.princeton.edu/news/data-traffic-system-switches-control-network-administrators">Article</a>&nbsp;]
-            </li>    
+            </li>
             <li>
               Prof. Nick McKeown's interview with SDxCentral, June 2016.
               <br>
