adding projects that use PISCES

--- a/resources.html
+++ b/resources.html
@@ -48,6 +48,7 @@
               <li><a href="members.html">Members</a></li>
               <li><a href="publications.html">Publications</a></li>
               <li><a href="resources.html">Resources</a></li>
+              <li><a href="usage.html">Projects using PISCES</a></li>
             </ul>
 <!--
             <ul class="nav navbar-nav navbar-right">
