--- a/usage.html
+++ b/usage.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -63,14 +62,56 @@
     <div class="container">
       <div class="row">
         <div class="offset1 span8">
-          <h1>Publications</h1>
-          <h3>Conference Papers</h3>
-            <p><a name="sigcomm16-pisces"></a>
-              Muhammad Shahbaz, Sean Choi, Ben Pfaff, Changhoon Kim, Nick Feamster, Nick McKeown, and Jennifer Rexford.
-              <b>PISCES: A Programmable, Protocol-Independent Software Switch</b>.
-              In <em>ACM SIGCOMM, Florianópolis, Brazil</em>, August 2016.
+          <h1>Projects</h1>
+          <h3>Research Projects</h3>
+            <p>
+              Huynh Tu Dang, Han Wang, Theo Jepsen, Gordon Brebner, Changhoon Kim, Jennifer Rexford, and Robert Soulé.
+              <b>Whippersnapper: A P4 Language Benchmark Suite</b>.
+              In <em>ACM SOSR</em>, April 2017.
               <br>
-              [&nbsp;<a href="./papers/sigcomm16-pisces.pdf">Camera Ready</a>, <a href="http://conferences.sigcomm.org/sigcomm/2016/files/program/sigcomm/Session11-Paper02-PISCES-Muhammad-Slides.pdf">Slides</a>&nbsp;]
+              [&nbsp;<a href="https://dl.acm.org/citation.cfm?id=3050231">Paper</a>&nbsp;]
+            </p>
+            <p>
+              Eyal Cidon, Sean Choi, Sachin Katti, and Nick McKeown.
+              <b>AppSwitch: Application-layer Load Balancing within a Software Switch</b>.
+              In <em>ACM APNet</em>, August 2017.
+              <br>
+              [&nbsp;<a href="https://dl.acm.org/citation.cfm?id=3106998">Paper</a>&nbsp;]
+            </p>
+            <p>
+              Cheng Zhang, Jun Bi, Yu Zhou, Abdul Basit Dogar, and Jianping Wu.
+              <b>HyperV: A High Performance Hypervisor for Virtualization of the Programmable Data Plane</b>.
+              In <em>IEEE ICCCN</em>, August 2017.
+              <br>
+              [&nbsp;<a href="https://dl.acm.org/citation.cfm?id=3050231">Paper</a>&nbsp;]
+            </p>
+            <p>
+              Giuseppe Siracusano, Roberto Bifulco, and Stefano Salsano.
+              <b>TCP Proxy Bypass: all the gain with no pain!</b>.
+              In <em>ACM SIGCOMM</em>, August 2017. (Demo)
+              <br>
+              [&nbsp;<a href="https://dl.acm.org/citation.cfm?id=3131996">Paper</a>&nbsp;]
+            </p>
+            <p>
+              Mostafa Uddin, Sarit Mukherjee, Hyunseok Chang, and T. V. Lakshman.
+              <b>SDN-based Service Automation for IoT</b>.
+              In <em>IEEE ICNP</em>, October 2017.
+              <br>
+              [&nbsp;<a href="https://ieeexplore.ieee.org/document/8117555">Paper</a>&nbsp;]
+            </p>
+            <p>
+              Giuseppe Siracusano, Roberto Bifulco, Martino Trevisan, Tobias Jacobs, Simon Kuenzer, Stefano Salsano, Nicola Blefari-Melazzi, and Felipe Huici.
+              <b>Re-Designing Dynamic Content Delivery in the Light of a Virtualized Infrastructure</b>.
+              In <em>IEEE JSAC</em>, October 2017.
+              <br>
+              [&nbsp;<a href="https://ieeexplore.ieee.org/document/8059757">Paper</a>&nbsp;]
+            </p>
+            <p>
+              Péter Vörös, Dániel Horpácsi, Róbert Kitlei, Dániel Leskó, Máté Tejfel, and Sándor Laki.
+              <b>T4P4S: A Target-independent Compiler for Protocol-independent Packet Processors</b>.
+              In <em>IEEE HPSR</em>, June 2018.
+              <br>
+              [&nbsp;<a href="https://www.researchgate.net/profile/Sandor_Laki/publication/326652427_T4P4S_A_Target-independent_Compiler_for_Protocol-independent_Packet_Processors/links/5b88e93d4585151fd13dd78b/T4P4S-A-Target-independent-Compiler-for-Protocol-independent-Packet-Processors.pdf">Paper</a>&nbsp;]
             </p>
         </div>
       </div>
@@ -80,7 +121,6 @@
         <p>&copy; Princeton University, 2016</p>
       </footer>
     </div>
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
