--- a/members.html
+++ b/members.html
@@ -45,9 +45,10 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
 <!--              <li class="active"><a href="#">Home</a></li>-->
-              <li><a href="members.html">Members</a></li> 
+              <li><a href="members.html">Members</a></li>
               <li><a href="publications.html">Publications</a></li>
               <li><a href="resources.html">Resources</a></li>
+              <li><a href="usage.html">Projects using PISCES</a></li>
             </ul>
 <!--
             <ul class="nav navbar-nav navbar-right">
@@ -58,7 +59,7 @@
         </div><!--/.container-fluid -->
       </nav>
     </div> <!-- /container -->
-      
+
     <div class="container">
       <h1>Members</h1>
       <hr>
@@ -85,20 +86,20 @@
           <ul>
             <li><a href="https://twitter.com/Ben_Pfaff">Ben Pfaff</a> (Open vSwitch - Lead Contributor)</li>
           </ul>
-        </div>  
+        </div>
         <br>
         <div class="span4">
           <h2><img src="images/barefoot-logo.jpg" alt="Barefoot" width="130" height="33"/></h2>
           <ul>
             <li><a href="https://www.linkedin.com/in/changhoon-kim-b3394317">Changhoon Kim</a> (Director of System Architecture)</li>
           </ul>
-        </div>  
-      </div>      
-        
+        </div>
+      </div>
+
       <hr>
       <footer>
         <p>&copy; Princeton University, 2016</p>
-      </footer>    
+      </footer>
     </div>
 
 
